--- a/basic_autoencoder.ipynb
+++ b/basic_autoencoder.ipynb
@@ -26,7 +26,8 @@
     "\n",
     "loader = torch.utils.data.DataLoader(dataset=dataset,\n",
     "batch_size=32,\n",
-    "shuffle = True)\n"
+    "shuffle = True)\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
    ]
   },
   {
@@ -65,6 +66,7 @@
     "        )\n",
     "    \n",
     "    def forward(self, x):\n",
+    "        # x.to(device)\n",
     "        encoded = self.encoder(x)\n",
     "        decoded = self.decoder(encoded)\n",
     "        return decoded\n"
@@ -76,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = AutoEncoder()\n",
+    "model = AutoEncoder().to(device)\n",
     "\n",
     "loss_function = torch.nn.MSELoss()\n",
     "\n",
@@ -97,10 +99,10 @@
     "for epoch in range(epochs):\n",
     "    for (image, _) in loader:\n",
     "        # Reshaping the image to (-1, 784)\n",
-    "        image = image.reshape(-1, 28*28)\n",
+    "        image = image.reshape(-1, 28*28).to(device)\n",
     "        \n",
     "        # Output of Autoencoder\n",
-    "        reconstructed = model(image)\n",
+    "        reconstructed = model.forward(image)\n",
     "        \n",
     "        # Calculating the loss function\n",
     "        loss = loss_function(reconstructed, image)\n",
